--- a/bandit_experiment.ipynb
+++ b/bandit_experiment.ipynb
@@ -45,7 +45,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
+      "id": "e680ca0f",
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "id": "bf5905976fb24fe",
       "metadata": {
         "cellView": "form",
@@ -58,10 +66,16 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'eml_k_bandit' already exists and is not an empty directory.\n"
+            "Cloning into 'eml_k_bandit'...\n",
+            "remote: Enumerating objects: 66, done.\u001b[K\n",
+            "remote: Counting objects: 100% (66/66), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
+            "remote: Total 66 (delta 28), reused 42 (delta 14), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (66/66), 318.16 KiB | 1.93 MiB/s, done.\n",
+            "Resolving deltas: 100% (28/28), done.\n"
           ]
         }
       ],
@@ -74,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "4582eec6",
       "metadata": {
         "ExecuteTime": {
@@ -94,7 +108,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "['c:\\\\Users\\\\Carlos\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\python313.zip', 'c:\\\\Users\\\\Carlos\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\DLLs', 'c:\\\\Users\\\\Carlos\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib', 'c:\\\\Users\\\\Carlos\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313', '', 'C:\\\\Users\\\\Carlos\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages', 'C:\\\\Users\\\\Carlos\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32', 'C:\\\\Users\\\\Carlos\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\win32\\\\lib', 'C:\\\\Users\\\\Carlos\\\\AppData\\\\Roaming\\\\Python\\\\Python313\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\Carlos\\\\AppData\\\\Local\\\\Programs\\\\Python\\\\Python313\\\\Lib\\\\site-packages', '/content/eml_k_bandit']\n"
+            "['/Users/franciscosaez/Downloads/SEGUNDO CUATRIMESTRE/EXTENSIONES', '/opt/anaconda3/lib/python312.zip', '/opt/anaconda3/lib/python3.12', '/opt/anaconda3/lib/python3.12/lib-dynload', '', '/opt/anaconda3/lib/python3.12/site-packages', '/opt/anaconda3/lib/python3.12/site-packages/aeosa', '/opt/anaconda3/lib/python3.12/site-packages/setuptools/_vendor', '/content/eml_k_bandit', '/content/eml_k_bandit']\n"
           ]
         }
       ],
@@ -113,11 +127,91 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "id": "1a29f1b2",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement algotihms (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for algotihms\u001b[0m\u001b[31m\n",
+            "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+            "Collecting arms\n",
+            "  Downloading arms-1.10.1-py3-none-any.whl.metadata (2.9 kB)\n",
+            "Collecting lesscli>=0.2.0 (from arms)\n",
+            "  Downloading lesscli-0.3.0-py3-none-any.whl.metadata (639 bytes)\n",
+            "Requirement already satisfied: rich in /opt/anaconda3/lib/python3.12/site-packages (from arms) (13.7.1)\n",
+            "Collecting pyperclip (from arms)\n",
+            "  Downloading pyperclip-1.9.0.tar.gz (20 kB)\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25hCollecting InquirerPy (from arms)\n",
+            "  Downloading InquirerPy-0.3.4-py3-none-any.whl.metadata (8.1 kB)\n",
+            "Requirement already satisfied: json5 in /opt/anaconda3/lib/python3.12/site-packages (from arms) (0.9.6)\n",
+            "Requirement already satisfied: requests in /opt/anaconda3/lib/python3.12/site-packages (from arms) (2.32.3)\n",
+            "Collecting pfzy<0.4.0,>=0.3.1 (from InquirerPy->arms)\n",
+            "  Downloading pfzy-0.3.4-py3-none-any.whl.metadata (4.9 kB)\n",
+            "Requirement already satisfied: prompt-toolkit<4.0.0,>=3.0.1 in /opt/anaconda3/lib/python3.12/site-packages (from InquirerPy->arms) (3.0.43)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/anaconda3/lib/python3.12/site-packages (from requests->arms) (3.3.2)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /opt/anaconda3/lib/python3.12/site-packages (from requests->arms) (3.7)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/anaconda3/lib/python3.12/site-packages (from requests->arms) (2.2.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /opt/anaconda3/lib/python3.12/site-packages (from requests->arms) (2024.8.30)\n",
+            "Requirement already satisfied: markdown-it-py>=2.2.0 in /opt/anaconda3/lib/python3.12/site-packages (from rich->arms) (2.2.0)\n",
+            "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /opt/anaconda3/lib/python3.12/site-packages (from rich->arms) (2.15.1)\n",
+            "Requirement already satisfied: mdurl~=0.1 in /opt/anaconda3/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich->arms) (0.1.0)\n",
+            "Requirement already satisfied: wcwidth in /opt/anaconda3/lib/python3.12/site-packages (from prompt-toolkit<4.0.0,>=3.0.1->InquirerPy->arms) (0.2.5)\n",
+            "Downloading arms-1.10.1-py3-none-any.whl (22 kB)\n",
+            "Downloading lesscli-0.3.0-py3-none-any.whl (4.1 kB)\n",
+            "Downloading InquirerPy-0.3.4-py3-none-any.whl (67 kB)\n",
+            "Downloading pfzy-0.3.4-py3-none-any.whl (8.5 kB)\n",
+            "Building wheels for collected packages: pyperclip\n",
+            "  Building wheel for pyperclip (setup.py) ... \u001b[?25ldone\n",
+            "\u001b[?25h  Created wheel for pyperclip: filename=pyperclip-1.9.0-py3-none-any.whl size=11003 sha256=f79bfba3fad729db2084f134df1f3885823b67ef65c1a644cf0f92f8633dfad9\n",
+            "  Stored in directory: /Users/franciscosaez/Library/Caches/pip/wheels/e0/e8/fc/8ab8aa326e33bc066ccd5f3ca9646eab4299881af933f94f09\n",
+            "Successfully built pyperclip\n",
+            "Installing collected packages: pyperclip, lesscli, pfzy, InquirerPy, arms\n",
+            "Successfully installed InquirerPy-0.3.4 arms-1.10.1 lesscli-0.3.0 pfzy-0.3.4 pyperclip-1.9.0\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Collecting plotting\n",
+            "  Downloading plotting-0.0.7-py3-none-any.whl.metadata (2.2 kB)\n",
+            "Requirement already satisfied: matplotlib in /opt/anaconda3/lib/python3.12/site-packages (from plotting) (3.9.2)\n",
+            "Requirement already satisfied: seaborn in /opt/anaconda3/lib/python3.12/site-packages (from plotting) (0.13.2)\n",
+            "Requirement already satisfied: pandas in /opt/anaconda3/lib/python3.12/site-packages (from plotting) (2.2.2)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (1.2.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (0.11.0)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (4.51.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (1.4.4)\n",
+            "Requirement already satisfied: numpy>=1.23 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (1.26.4)\n",
+            "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (24.1)\n",
+            "Requirement already satisfied: pillow>=8 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (10.4.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (3.1.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib->plotting) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /opt/anaconda3/lib/python3.12/site-packages (from pandas->plotting) (2024.1)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /opt/anaconda3/lib/python3.12/site-packages (from pandas->plotting) (2023.3)\n",
+            "Requirement already satisfied: six>=1.5 in /opt/anaconda3/lib/python3.12/site-packages (from python-dateutil>=2.7->matplotlib->plotting) (1.16.0)\n",
+            "Downloading plotting-0.0.7-py3-none-any.whl (13 kB)\n",
+            "Installing collected packages: plotting\n",
+            "Successfully installed plotting-0.0.7\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'algorithms'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[7], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m List\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01malgorithms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Algorithm, EpsilonGreedy\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01marms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ArmNormal, Bandit\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m List, Dict, Any\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'algorithms'"
+          ]
+        }
+      ],
       "source": [
+        "%pip install algotihms\n",
+        "%pip install arms\n",
+        "%pip install plotting\n",
         "import numpy as np\n",
         "from typing import List\n",
         "\n",
@@ -144,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "7377ca48ee0f5946",
       "metadata": {
         "ExecuteTime": {
@@ -196,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "a1ebcfc1",
       "metadata": {},
       "outputs": [],
@@ -244,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "157bf5cc",
       "metadata": {
         "ExecuteTime": {
@@ -307,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "d3fd68ee",
       "metadata": {
         "ExecuteTime": {
@@ -341,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "1048c76a",
       "metadata": {},
       "outputs": [
@@ -362,7 +456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "76f64799",
       "metadata": {},
       "outputs": [
@@ -403,7 +497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "7523a4ee",
       "metadata": {},
       "outputs": [
@@ -492,7 +586,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
       "language": "python",
       "name": "python3"
     },
@@ -506,7 +600,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.2"
+      "version": "3.12.7"
     }
   },
   "nbformat": 4,
