--- a/bandit_experiment .ipynb
+++ b/bandit_experiment .ipynb
@@ -3,11 +3,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ldaniel-hm/eml_k_bandit/blob/main/bandit_experiment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/solracmendo/k_brazos_MLSG/blob/main/bandit_experiment%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -47,7 +47,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e680ca0f",
-      "metadata": {},
+      "metadata": {
+        "id": "e680ca0f"
+      },
       "outputs": [],
       "source": []
     },
@@ -58,8 +60,7 @@
       "metadata": {
         "cellView": "form",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "bf5905976fb24fe",
         "outputId": "bbca3f9d-ef70-4ebd-f8cb-44a0db4c2a3f"
@@ -96,8 +97,7 @@
         },
         "cellView": "form",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "4582eec6",
         "outputId": "e7fac2c4-73e6-4271-a94a-4f40c920d478"
@@ -128,7 +128,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "1a29f1b2",
-      "metadata": {},
+      "metadata": {
+        "id": "1a29f1b2",
+        "outputId": "8c0e1e55-d6e3-4235-ecab-c130bea4f25e"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -271,11 +274,11 @@
         "                algo.update(chosen_arm, reward) # Actualizar el valor estimado del brazo seleccionado.\n",
         "\n",
         "                rewards[idx, step] += reward # Acumular la recompensa obtenida en la matriz rewards.\n",
-        "                \n",
+        "\n",
         "                # Modificar optimal_selections cuando el brazo elegido es el óptimo\n",
         "                if chosen_arm == optimal_arm:\n",
         "                    optimal_selections[idx, step] += 1\n",
-        "                \n",
+        "\n",
         "                # Calcular regret acumulado\n",
         "                optimal_reward = current_bandit.pull_arm(optimal_arm)\n",
         "                regret_accumulated[idx, step] += optimal_reward - reward\n",
@@ -291,7 +294,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a1ebcfc1",
-      "metadata": {},
+      "metadata": {
+        "id": "a1ebcfc1"
+      },
       "outputs": [],
       "source": [
         "def calculate_arm_statistics(bandit, algorithms: List, runs: int, steps: int):\n",
@@ -309,7 +314,7 @@
         "      diccionarios con las estadísticas de los brazos para ese algoritmo.\n",
         "    \"\"\"\n",
         "    # Inicializar el diccionario de estadísticas por algoritmo\n",
-        "    arm_stats = {algo.__class__.__name__: {i: {'avg_reward': 0, 'selections': 0} \n",
+        "    arm_stats = {algo.__class__.__name__: {i: {'avg_reward': 0, 'selections': 0}\n",
         "                 for i in range(len(bandit.arms))} for algo in algorithms}\n",
         "\n",
         "    for algo in algorithms:\n",
@@ -345,8 +350,7 @@
           "start_time": "2025-01-29T15:16:59.172459Z"
         },
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "157bf5cc",
         "outputId": "7e8aa027-53e5-4851-a800-4ee1387917c8"
@@ -436,7 +440,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "1048c76a",
-      "metadata": {},
+      "metadata": {
+        "id": "1048c76a",
+        "outputId": "25aca91d-596c-4180-d39b-d136c3fab6ad"
+      },
       "outputs": [
         {
           "data": {
@@ -457,7 +464,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "76f64799",
-      "metadata": {},
+      "metadata": {
+        "id": "76f64799",
+        "outputId": "9959b5ac-6d0b-4361-d2b5-c56aba2f452e"
+      },
       "outputs": [
         {
           "data": {
@@ -496,9 +506,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "b60e2514",
-      "metadata": {},
+      "metadata": {
+        "id": "b60e2514",
+        "outputId": "aaacaf72-fc32-4b1f-c425-5c3baaea706e"
+      },
       "outputs": [
         {
           "ename": "NameError",
@@ -545,7 +558,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "7523a4ee",
-      "metadata": {},
+      "metadata": {
+        "id": "7523a4ee",
+        "outputId": "9dace78b-d57e-4436-8bf2-55e38db9ca9e"
+      },
       "outputs": [
         {
           "data": {
@@ -628,8 +644,8 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "base",
