--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Acceso a la parte A:<a href=\"https://colab.research.google.com/github/solracmendo/k_brazos_MLSG/blob/main/bandit_experiment.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "Acceso a la parte A:<a href=\"https://colab.research.google.com/github/solracmendo/k_brazos_MLSG/blob/main/bandit_experiment%20.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
     "Acceso a la parte B: <a href=\"https://colab.research.google.com/github/solracmendo/k_brazos_MLSG/blob/main/bandit_experiment_2_updated.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
